--- a/oh-package.json5
+++ b/oh-package.json5
@@ -1,12 +1,12 @@
 {
-  "name": "@ycj3/streaming-markdown",
-  "version": "1.0.0",
-  "author": "Carlson carlsonyuandev@gmail.com",
-  "description": "Streaming markdown block renderer for ArkTS",
-  "main": "src/main/ets/index.ets",
-  "homepage": "https://github.com/ycj3",
-  "repository": "https://github.com/ycj3/streaming-markdown",
-  "keywords": ["streaming", "markdown", "arkts", "llm"],
-  "license": "Apache-2.0",
-  "dependencies": {}
+  name: "@ycj3/streaming-markdown",
+  version: "1.1.0",
+  author: "Carlson carlsonyuandev@gmail.com",
+  description: "HarmonyOS ArkTS 流式 Markdown 渲染器，支持 char/word/chunk 三种渲染动画模式，专为实时 LLM 对话界面设计。",
+  main: "src/main/ets/index.ets",
+  homepage: "https://github.com/ycj3",
+  repository: "https://github.com/ycj3/streaming-markdown",
+  keywords: ["streaming", "markdown", "arkts", "llm", "animation", "char", "word", "chunk"],
+  license: "Apache-2.0",
+  dependencies: {},
 }
