--- a/oh-package.json5
+++ b/oh-package.json5
@@ -1,8 +1,8 @@
 {
   name: "@ycj3/streaming-markdown",
-  version: "1.2.0",
+  version: "2.0.0",
   author: "Carlson carlsonyuandev@gmail.com",
-  description: "HarmonyOS ArkTS 流式 Markdown 渲染器，支持 char/word/chunk 三种渲染动画模式，专为实时 LLM 对话界面设计。",
+  description: "HarmonyOS ArkTS 流式 Markdown 渲染器（V2 stream-only），支持 append/finish 增量输入与 LLM 厂商适配层。",
   main: "src/main/ets/index.ets",
   homepage: "https://github.com/ycj3",
   repository: "https://github.com/ycj3/streaming-markdown",
